--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -89,7 +89,7 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/profile">
+					<li><a href="/profile/:id">
 							Cala Ruggeri <i class="fas fa-user"></i>
 						</a>
 					</li>
