--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,17 +15,18 @@
 	<section class="info-usuario container ">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="/images/cala-perfil.jpg" alt="foto de perfil" class="foto-perfil">
+				<img src=<%= usuario.image %>  alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 
-					<h1 class="main-title"> Cala Ruggeri</h1>
-		
+					<h1 class="main-title"> <%= usuario.nombre %> </h1>
+					<!--on click que cami-bie a "siguiendo"-->
 					<a href='/allProducts/:id' class="btn mt-3 ml-4" href="">SEGUIR</a>
 					
 				</div>
 				<a class="editar-perfil" href="/profile-edit">Editar perfil</a>
+				<!--ESTO TIENE QUE SER EL FORM DE MODIFICAR PERFIL-->
 				<div>
 					<ul class="el-usuario">
 						<li class="infoUsuario">8 productos</li>
@@ -47,17 +48,17 @@
 			
 			<!-- Show mis productos -->
 
-			<% for (let i = 8; i < 12; i++) { %> 
+			<% for (let i = 0; i < usuario.productos[i].length; i++ ) { %> 
 
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="/product/<%= productos[i].id %> ">
 							<figure class="product-box_image">
-								<img src="<%= productos[i].imagen %>" alt="">
+								<img src="<%= usuario. productos[i].image %>" alt="">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= productos[i].nombre %></h2>
-								<p><%= productos[i].descripcion %></p>
+								<h2><%= usuario.productos[i].nombre %></h2>
+								<p><%= usuario. productos[i].descripcion %></p>
 								<p>Comentarios: 4 </p>
 							</article>
 						</a>
