--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -38,7 +38,7 @@
 				<input class="form-input" type="date" placeholder="fecha de creacion" name="fecha">
 			</li>
 			<li class="bordear">
-				<input type="hidden" name="id" >
+				<input type="hidden" name="id" value="<% producto.id %> ">
 			</li>
 			 <li class="bordear">
 				<input class="actualizar-perfil" type="submit" placeholder="Añadir producto">
