--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -42,7 +42,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Restaurantes favoritos</h2>
+				<h2 class="products-title"> Sus Restaurantes </h2>
 			</div>
 			
 			
