cambios bd y vista de profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,7 +48,7 @@
 			
 			<!-- Show mis productos -->
 
-			<% for (let i = 0; i < usuario.productos[i].length; i++ ) { %> 
+			<% for (let i = 0; i < usuario.productos.length; i++ ) { %> 
 
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
