cambios perfil, detalle prodcutos

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -43,7 +43,7 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
       
-				<%for (let i = 0; i < producto.comentarios[i].length; i++ ) { %>
+				<% producto.comentarios.forEach(element => { %>
 			
 						<article>
 							<div class="icono-usuario-comentario">
@@ -51,12 +51,13 @@
 							</div>
 						<div class="data">
 							<div class="user">
-								<strong> <a href="/profile/<%=producto.comentarios[i].user_id %> "><%=producto.comentarios[i].texto %> </a> </strong>
+								<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
+								<strong> <a href="/profile/<%=element.user_id %> "><%=element.texto %> </a> </strong>
 							
 							</div>
 							</div>
 						</article>
-						<% } %> 
+						<% }) %> 
 			<!--CORREGIR ESTO PAR que anden el detalle con los comentarios etc -->
 					
 
