--- a/views/product.ejs
+++ b/views/product.ejs
@@ -43,7 +43,7 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
       
-				<%for (let i = 0; i < producto.comentarios[i].length; i++ ) { %>
+				<% producto.comentarios.forEach(element => { %>
 			
 						<article>
 							<div class="icono-usuario-comentario">
