--- a/views/product.ejs
+++ b/views/product.ejs
@@ -67,7 +67,7 @@
 							<input  type="hidden"  name="id" value="<%= producto.id %>">
 						</li>
 						<li>
-							<input class="form-input" type="text" value="texto" name="texto" placeholder="Agregar comentario">
+							<input class="form-input" type="text"  name="texto" placeholder="Agregar comentario">
 						</li>
 						<li>
 							<button class="actualizar-perfil"type="submit" class="buy-now-button" type="submit"> AGREGAR COMENTARIO</button>
