--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -33,7 +33,9 @@
 							<!-- <label class="form-label" for="apellido">Apellido:</label>-->
 							 <input class="form-input" type="apellido" id="apellido" placeholder="Apellido"name="apellido" value="<% usuario.apellido %> ">
 						 </li>
-						
+						 <li class="bordear">
+							<input type="hidden" name="id" value="<% usuario.id %> ">
+						</li>
 						
 		
 						 <li class="bordear">
