for de mas veijos y mas nuevos en index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Nustras Recomendaciones</h2>
+				<h2 class="products-title">Los mas nuevos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 
@@ -102,6 +102,35 @@
 						<article class="product-box_data">
 							<h2><%= productos[i].nombre %></h2>
 							<p><%= productos[i].descripcion %></p>
+							<p>Comentarios: 4 </p>
+						</article>
+					</a>
+				</section>
+			</div>
+
+			<% } %> 
+			
+		</div>
+	</div>
+
+	<div class="container products-wrapper">
+		<div class="row">
+			<div class="col-12">
+				<h2 class="products-title">Los mas viejos</h2>
+			</div>
+			<!-- Show the "ultimos" products -->
+
+			<% for (let i = 0; i < productos2.length; i++) { %> 
+
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product/<%= productos2[i].id %> ">
+						<figure class="product-box_image">
+							<img src="<%= productos2[i].image %>" alt="">
+						</figure>
+						<article class="product-box_data">
+							<h2><%= productos2[i].nombre %></h2>
+							<p><%= productos2[i].descripcion %></p>
 							<p>Comentarios: 4 </p>
 						</article>
 					</a>
