cambios agregar comentario

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -52,8 +52,8 @@
 							</div>
 						<div class="data">
 							<div class="user">
-								<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
-								<strong> <a href="/profile/<%=element.user_id %> "><%=element.texto %> </a> </strong>
+								<strong> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></strong>
+								<p> <a href="/profile/<%=element.user_id %> "><%=element.texto %> </a> </p>
 							
 							</div>
 							</div>
