--- a/views/product.ejs
+++ b/views/product.ejs
@@ -70,7 +70,7 @@
 					
 
 				</section>
-					<form class="form" action="/comentario" method="POST">
+					<form class="form" action="/product/<%=producto.id  %> " method="POST">
 						
 						<li>
 							<input class="form-input" type="text"  name="texto" placeholder="Agregar comentario">
