--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -26,38 +26,38 @@
 						  
 							<li class="bordearDiferente"> 
 							<!--<label class="form-label" for="nombre">Nombre:</label> -->
-							<input class="form-input" type="nombre" id="nombre" placeholder="Nombre" name="nombre" value="<% usuario.nombre %> ">
+							<input class="form-input" type="nombre" id="nombre" placeholder="Nombre" name="nombre" >
 						   
 						 </li>
 						 <li class="bordear">
 							<!-- <label class="form-label" for="apellido">Apellido:</label>-->
-							 <input class="form-input" type="apellido" id="apellido" placeholder="Apellido"name="apellido" value="<% usuario.apellido %> ">
+							 <input class="form-input" type="apellido" id="apellido" placeholder="Apellido"name="apellido" >
 						 </li>
 						 <li class="bordear">
-							<input type="hidden" name="id" value="<% usuario.id %> ">
+							<input type="hidden" name="id" >
 						</li>
 						
 		
 						 <li class="bordear">
 							<!--- <label class="form-label" for="mail">Correo electrónico:</label> -->
-							 <input class="form-input" type="mail" id="mail" placeholder="Correo electrónico" name="mail" value="<% usuario.mail %> ">
+							 <input class="form-input" type="mail" id="mail" placeholder="Correo electrónico" name="mail" >
 						 </li>
 	
 						 <li class="bordear">
 							<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-							 <input class="form-input" type="telefono" id="telefono" placeholder="Telefono celular" name="telefono" value="<% usuario.telefono %> ">
+							 <input class="form-input" type="telefono" id="telefono" placeholder="Telefono celular" name="telefono" >
 						 </li>
 						 <li class="bordear">
 							<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-							 <input class="form-input" type="date" id="fecha" placeholder="Fecha de nacimiento" name="fecha" value="<% usuario.fecha %> ">
+							 <input class="form-input" type="date" id="fecha" placeholder="Fecha de nacimiento" name="fecha" >
 						 </li>
 						 <li class="bordear">
 							<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-							 <input class="form-input" type="file" id="image" placeholder="Imagen" name="image" value="<% usuario.image %> ">
+							 <input class="form-input" type="file" id="image" placeholder="Imagen" name="image" >
 						 </li>
 						 <li class="bordear">
 							<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-							 <input class="form-input" type="password" id="contraseña"placeholder="Contraseña" name="contraseña" value="<% usuario.contraseña %> ">
+							 <input class="form-input" type="password" id="contraseña"placeholder="Contraseña" name="contraseña" >
 						 </li>
 		
 	
