--- a/views/product.ejs
+++ b/views/product.ejs
@@ -71,7 +71,9 @@
 			<!--CORREGIR ESTO PAR que anden el detalle con los comentarios etc -->
 					
 
+				<% if (!logueado) {%>
 				
+				<%} else{ %>
 
 					<form class="form" action="/product/<%=producto.id  %> " method="POST">
 					
@@ -91,7 +93,7 @@
 						
 						
 					</form>
-			
+					<%} %>
 					
 					<hr>
 				</div>
