--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -28,7 +28,7 @@
 			
 				 
 			 <li class="bordear">
-					<input class="form-input" type="file" name="image" />
+					<input class="form-input" type="file" name="productImage" />
 			 </li>
 			 
 			 <li class="bordear">
