terminado editar perfil, falta arreglar multer

--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -57,7 +57,7 @@
 						 </li>
 						 <li class="bordear">
 							<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
-							 <input class="form-input" type="password" placeholder="Contraseña" name="contraseña" value="<%= usuario.contraseña  %> " >
+							 <input class="form-input" type="password" placeholder="Contraseña" name="contraseña"  >
 						 </li>
 		
 	
