--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,12 +22,12 @@
 
 					<h1 class="main-title"> <%= usuario.nombre %> </h1>
 					<!--on click que cami-bie a "siguiendo"-->
-					<a href='/allProducts/:id' class="btn mt-3 ml-4" href="">SEGUIR</a>
+				
 					
 				</div>
 				<form  action="/profile-edit" method="GET">
 					<input type="hidden" name="id" value="<%- usuario.id %>" >
-					<button class="editar-perfil" type="submit" > EDITAR PERFIL </button>
+					<button class="btn mt-3 ml-4" type="submit" > EDITAR PERFIL </button>
 				</form>
 				<!--<a class="editar-perfil" href="/profile-edit">Editar perfil</a>-->
 				<div>
