--- a/views/product.ejs
+++ b/views/product.ejs
@@ -20,7 +20,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">
 				<%= producto.nombre %></h2> 
-				<!--if (locals.logueado && locals.userId == producto.usuarios.id){--> 
+				<!--if (locals.logueado && locals.userId == producto.usuarios.id){-->
 			<p class="product-detail-description">
 				<form class="tablaRegistracion" action="/modificar" method="GET">
 					<input type="hidden" name="id" value="<%= producto.id %>">
@@ -31,7 +31,7 @@
 					<input  class="actualizar-perfil" type="submit" value="Borrar">
 				  </form>
 			</p>
-			<!--}-->  
+			<!--}-->
 		</div>
 
 		<div class="product-detail">
@@ -55,7 +55,7 @@
 						</div>
 					
 					<div class="data">
-						<a href="profile/<%= element.user_id  %> ">
+						<a href="profile/<%= element.usuarios.id  %> ">
 							<div class="user">
 
 								<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
