validacion desde la vista, editar perfil

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -55,7 +55,7 @@
 						</div>
 					
 					<div class="data">
-						<a href="profile/<%= element.usuarios.id  %> ">
+						<a href="/profile/<%= element.usuarios.id  %> ">
 							<div class="user">
 
 								<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
