--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,18 +25,21 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
+			<a href="/product/1">
 				<section class="product-box">
 				<!--<a href="">-->	
 						<figure class="product-box_image">
 							<img src="/images/products/alos2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
+							
 							<h2>¡NUEVO RESTAURANTE!</h2>
 							<p>Conoce Alo's, no te lo pierdas!.</p>
-						
+
 						</article>
 					<!--</a>-->
 				</section>
+				</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
