--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 
-					<h1 class="main-title"> <%= usuario.nombre %> </h1>
+					<h1 class="main-title"> <%= usuario.nombre + usuario.apellido %> </h1>
 					<!--on click que cami-bie a "siguiendo"-->
 					<a href='/allProducts/:id' class="btn mt-3 ml-4" href="">SEGUIR</a>
 					
