--- a/views/product.ejs
+++ b/views/product.ejs
@@ -46,27 +46,25 @@
 					<section class="comments">
       
 				<% producto.comentarios.forEach(element => { %>
-			
+					<a href="/profile/<%= element.user_id %> ">
 						<article>
 						
 				
 							<div class="icono-usuario-comentario">
 								<i class="far fa-user"></i>
 							</div>
-						<div class="data">
-							<div class="user">
+		
+						    <div class="data">
+								<div class="user">
 
-								<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
-								<strong> <a href="/profile/<%= element.user_id %> "></a> <%=element.texto %> </a> </strong>
-
-								
-
+									<p> <%= element.usuarios.nombre %> <%= element.usuarios.apellido %></p>
+									<strong> <%=element.texto %> </strong>
+								</div>
+							</div>
 							
-							</div>
-							</div>
-				
 			
 						</article>
+					</a>
 						<% }) %> 
 			<!--CORREGIR ESTO PAR que anden el detalle con los comentarios etc -->
 					
