arreglada la validacion de modificar y borrar

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -20,7 +20,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">
 				<%= producto.nombre %></h2> 
-		<!--if (locals.logueado && locals.userId == producto.usuarios.id){-->
+<% if (locals.logueado && locals.userId == producto.usuarios.id){ %> 
 			<p class="product-detail-description">
 				<form class="tablaRegistracion" action="/modificar" method="GET">
 					<input type="hidden" name="id" value="<%= producto.id %>">
@@ -31,7 +31,7 @@
 					<input  class="actualizar-perfil" type="submit" value="Borrar">
 				  </form>
 			</p>
-			<!--}-->
+			<% }%> 
 		</div>
 
 		<div class="product-detail">
