arreglado multer con SQL

--- a/views/allproducts.ejs
+++ b/views/allproducts.ejs
@@ -28,7 +28,7 @@
 				<section class="product-box">
 					<a href="/product/<%= element.id %> ">
 						<figure class="product-box_image">
-							<img src="<%= element.image %>" alt="">
+							<img src="/images/products/<%= element.image %>" alt="">
 						</figure>
 						<article class="product-box_data">
 							<h2><%= element.nombre %></h2>
