boton logueate para comentar

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -73,6 +73,7 @@
 					
 
 				<% if (!logueado) {%>
+					<a href="/login" class="actualizar-perfil"> Logueate para comentar</a>
 				
 				<%} else{ %>
 
