--- a/public/css/app.css
+++ b/public/css/app.css
@@ -135,7 +135,7 @@ hr {
   border-radius: 10px;
   height: 40px;
   font-size: 1.5em;
-  background-color: white;
+  background-color: black;
   color: white;
   
 }
