--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -31,7 +31,7 @@
 					<section class="product-box">
 						<a href="/product/<%= productos.id %> ">
 							<figure class="product-box_image">
-								<img src="<%= productos.image %>" alt="">
+								<img src="/images/products/<%= productos.image %>" alt="">
 							</figure>
 							<article class="product-box_data">
 								<h2><%= productos.nombre %></h2>
