coreccion de rutas de multer, para que se agreguen con la ruta a workbecnh

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
 				<section class="product-box">
 					<a href="/product/<%= productos[i].id %> ">
 						<figure class="product-box_image">
-							<img src="/images/products/<%= productos[i].image %>" alt="">
+							<img src="<%= productos[i].image %>" alt="">
 						</figure>
 						<article class="product-box_data">
 							<h2><%= productos[i].nombre %></h2>
@@ -129,7 +129,7 @@
 				<section class="product-box">
 					<a href="/product/<%= productos2[i].id %> ">
 						<figure class="product-box_image">
-							<img src="/images/products/<%= productos2[i].image %>" alt="">
+							<img src="<%= productos2[i].image %>" alt="">
 						</figure>
 						<article class="product-box_data">
 							<h2><%= productos2[i].nombre %></h2>
