cambios en edit profile a ver si anda

--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -34,7 +34,7 @@
 							 <input class="form-input" type="apellido" placeholder="Apellido"name="apellido" value="<%= usuario.apellido  %> " >
 						 </li>
 						 <li class="bordear">
-							<input type="hidden" name="id" >
+							<input type="hidden" name="id"  value="<%= usuario.id  %> ">
 						</li>
 						
 		
