--- a/public/css/app.css
+++ b/public/css/app.css
@@ -475,10 +475,38 @@ margin-right: 0px;
   font-weight: 400;
   font-size: 2.8em;
 }
-
+.productDescriptionBox{
+  display: grid;
+  grid-template-columns: 35% 62%;
+  justify-content: space-around;
+  
+}
 .product-detail-description {
   padding: 15px 15px 15px 40px;
   font-size: 1.8em;
+  line-height: 1.5;
+  color: #4a2e3b;
+  font-family: 'PT Sans', sans-serif;
+
+}
+.product-detail-description2 {
+  padding: 0px 0px 0px 0px 0px;
+  margin: 20px 0px 15px 40px;
+  font-size: 2.2em;
+  line-height: 1.5;
+  color: white;
+  font-family: 'PT Sans', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  border: solid 1px white;
+  
+}
+.product-detail-description2  a:hover {
+  color: rgba(230, 238, 252, 0.5) ;
+}
+.product-detail-description3 {
+  padding: 20px 15px 15px 0px;
+  font-size: 2.2em;
   line-height: 1.5;
   color: #4a2e3b;
   font-family: 'PT Sans', sans-serif;
