--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -15,7 +15,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Agregar un producto</h2>
+				<h2 class="products-title">Agrega un restaurante</h2>
 			</div>
 			
 	<div class="form-registracion">
@@ -40,7 +40,7 @@
 			</li>
 			
 			 <li class="bordear">
-				<input class="actualizar-perfil" type="submit" placeholder="Añadir producto">
+				<input class="actualizar-perfil" type="submit" value="Añadir producto">
 			</li>
 			<!--<a class="actualizar-perfil" href="/allProducts/:id">Añadir producto</a>--> 
 		   </ul>
