--- a/views/modificar.ejs
+++ b/views/modificar.ejs
@@ -28,7 +28,7 @@
 			
 				 
 			 <li class="bordear">
-					<input class="form-input" type="file" name="productImage" value="<% producto.image %> "/>
+					<input class="form-input" type="file" name="productModif" value="<% producto.image %> "/>
 			 </li>
 			 
 			 <li class="bordear">
