--- a/public/css/app.css
+++ b/public/css/app.css
@@ -281,6 +281,7 @@ color:white;
   font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   color: black;
+  font-size: 20px;
 }
 
 /*====== Banner ======*/
